--- a/src/main/resources/static/css/lesson05/style.css
+++ b/src/main/resources/static/css/lesson05/style.css
@@ -1,2 +1,47 @@
 @charset "UTF-8";
-body {background: #999;}
+body {
+	margin: 0;
+}
+li {
+	list-style: none;
+}
+a, a:hover {
+	text-decoration: none;
+}
+header {
+	background: #6495ec;
+	padding-top: 20px;
+}
+header .logo {
+	text-align: center;
+	margin-bottom: 30px;
+}
+header .logo a,
+header .logo a:hover {
+	color: #fff;
+	font-size: 25px;
+	font-weight: bold;
+}
+header nav ul li a,
+header nav ul li a:hover {
+	color: #fff;
+}
+header nav ul li {
+	margin-bottom: 15px;
+}
+.contents .inner {
+	width: 95%;
+	margin: auto;
+	padding: 20px 0 0 0
+}
+footer .inner {
+	padding: 30px 0;
+	width: 90%;
+	margin: auto;
+}
+footer .inner .footerLogo {
+	margin-right: 60px;
+}
+footer .inner p {
+	margin-bottom: -1px;
+}
