--- a/src/main/resources/static/css/lesson05/style.css
+++ b/src/main/resources/static/css/lesson05/style.css
@@ -45,3 +45,9 @@ footer .inner .footerLogo {
 footer .inner p {
 	margin-bottom: -1px;
 }
+label {
+	width: 100px;
+}
+label.microDust {
+	width: 120px;
+}
